--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -86,6 +86,15 @@ ifeq ($(arch), eic2025-cray)
   NETCDF = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 endif
 
+# Miyabi GPU supercomputer of the University of Tokyo
+ifeq ($(arch), miyabi-gpu)
+  FC = module purge; module load nvidia nv-hpcx netcdf hdf5 netcdf-fortran; mpifort
+  FFLAGS = -fast -Mconcur -Minfo -acc -cpp -gpu=cc90
+  NCLIB = 
+  NCINC = -I $(NETCDF_FORTRAN_INC)
+  NETCDF = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
+endif
+
 ###
 ### Obsolete systems
 ###
@@ -196,3 +205,4 @@ ifeq ($(arch),obcx)
   NCINC = 
   NETCDF  = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 
 endif
+
