--- a/src/shared/makefile-tools.arch
+++ b/src/shared/makefile-tools.arch
@@ -75,11 +75,11 @@ ifeq ($(arch), eic2025-cray)
   NETCDF = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5 -lz
 endif
 
-ifeq ($(arch), miyabi-gpu)
+ifeq ($(arch), miyabi-g)
   FC =  module purge; module load nvidia nv-hpcx netcdf hdf5 netcdf-fortran; nvfortran
   FFLAGS = -fast -Mconcur -Minfo -mp -cpp
   NCLIB = 
-  NCINC = -I $(NETCDF_FORTRAN_INC)
+  NCINC = -I /work/opt/local/aarch64/apps/nvidia/24.9/netcdf-fortran/4.6.1/include
   NETCDF = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
 endif
 
