--- a/src/shared/makefile.arch
+++ b/src/shared/makefile.arch
@@ -89,7 +89,7 @@ endif
 # Miyabi GPU supercomputer of the University of Tokyo
 ifeq ($(arch), miyabi-g)
   FC = module purge; module load nvidia nv-hpcx netcdf hdf5 netcdf-fortran; mpifort
-  FFLAGS = -fast -Minfo=all -acc -cpp -gpu=cc90
+  FFLAGS = -fast -Minfo=all -acc -cpp -gpu=cc90 -mp
   NCLIB = 
   NCINC = -I /work/opt/local/aarch64/apps/nvidia/24.9/netcdf-fortran/4.6.1/include
   NETCDF = -lnetcdff -lnetcdf -lhdf5_hl -lhdf5
